app/base/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprofile-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprofile-db
  template:
    metadata:
      labels:
        app: vprofile-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysqlport
        volumeMounts:
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: mysql-initdb
        configMap:
          name: mysql-init-config
