app/base/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprofile-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprofile-web
  template:
    metadata:
      labels:
        app: vprofile-web
    spec:
      containers:
      - name: nginx
        image: nginx:1.25-alpine
        ports:
        - containerPort: 80
          name: webport
        volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: vprofile-web
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vprofile-web
  type: LoadBalancer
