app/base/tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprofile-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vprofile-app
  template:
    metadata:
      labels:
        app: vprofile-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      enableServiceLinks: false
      containers:
        - name: tomcat
          image: kurosusama/vprofilek:v1.0.1@sha256:54b9d9703bb34d76bbb1091726ce2d35e2e159cfa247e532f15fee39ee154342
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: tomcat-temp
              mountPath: /usr/local/tomcat/temp
            - name: tomcat-work
              mountPath: /usr/local/tomcat/work
            - name: tomcat-logs
              mountPath: /usr/local/tomcat/logs
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet: { path: /, port: 8080 }
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet: { path: /, port: 8080 }
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: 8080 }
            periodSeconds: 15
      volumes:
        - name: tomcat-temp
          emptyDir: {}
        - name: tomcat-work
          emptyDir: {}
        - name: tomcat-logs
          emptyDir: {}
        

            
---
apiVersion: v1
kind: Service
metadata:
  name: vprofile-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: vprofile-app
  type: ClusterIP
